# Aegis

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: client.py  dataset.py  server.py  visualize.py
