[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis"
version = "0.1.0"
description = "Privacy-preserving federated learning for heart disease prediction"
license = {text = "MIT"}
dependencies = [
    "flwr[simulation]>=1.8.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[tool.flwr.app]
publisher = "aegis"

[tool.flwr.app.components]
serverapp = "src.server:app"
clientapp = "src.client:app"


#######################################################################
# CONFIGURATION MIGRATION NOTICE:
#
# What was previously called "federation config" for SuperLink
# connections in pyproject.toml has been renamed and moved.
#
# These settings are now **SuperLink connection configuration**
# and are defined in the Flower configuration file.
#
# The entries below are commented out intentionally and are kept
# only as a migration reference.
#
# Docs: https://flower.ai/docs/framework/ref-flower-configuration.html
#######################################################################

# [tool.flwr.federations]
# default = "local-simulation"

# [tool.flwr.federations.local-simulation]
# options.num-supernodes = 3
# options.backend.log-to-driver = false        
# options.backend.client-resources.num-cpus = 2      
# options.backend.client-resources.num-gpus = 0.0